# sp-data-loader

./: .gitignore  README.md  load_data.py  pyproject.toml
data/: 20230102.csv  20230103.csv  20230107.csv  20230108.csv  20230109.csv  20230110.csv  20230113.csv  20230118.csv  20230120.csv  20230122.csv  20230123.csv  20230127.csv  20230130.csv  20230131.csv
sql/: insert_daily_data.sql
src/main/: Technical Test.md  load_data.sh
src/main/data/: 20230101.csv  20230104.csv  20230105.csv  20230106.csv  20230111.csv  20230112.csv  20230114.csv  20230115.csv  20230116.csv  20230117.csv  20230119.csv  20230121.csv  20230124.csv  20230125.csv  20230126.csv  20230128.csv  20230129.csv
src/main/sql/: create_load_data_ddl.sql
src/test/: test_load_data.py
test/: test_load_data.py
