[tool.poetry]
name = "sp-data-loader"
version = "0.1.0"
description = "Virtual environment for the sp-data-loader"
authors = ["elena105755 <elena.manole@bbc.co.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
